# booking

./: .gitignore  CMakeLists.txt  Config.cmake.in  booking.cpp
.github/workflows/: build-test-install.yml
include/: Day_model.hpp  Hour_model.hpp  booking.hpp
qml/: Day_swipe_view.qml  Dia_delegate.qml  Horario_delegate.qml  Horario_list_view.qml  window.qml
src/: Day_model.cpp  Hour_model.cpp  booking.cpp
